Improved DetailsForm, treated hand-shake packet properly.

--- a/W2.PacketSniffer/App.config
+++ b/W2.PacketSniffer/App.config
@@ -25,6 +25,9 @@
             <setting name="IgnorePackets" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="UpgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
         </W2.PacketSniffer.Properties.Settings>
     </userSettings>
 </configuration>
