--- a/W2.PacketSniffer/Properties/Settings.settings
+++ b/W2.PacketSniffer/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="IgnorePackets" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
